K8s/redirect-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: redirect-lb
spec:
  type: LoadBalancer
  selector:
    app: redirect
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8001
