K8s/redirect-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redirect
spec:
  selector:
    app: redirect
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8001
  type: ClusterIP
