K8s/shortener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortener
spec:
  selector: 
    app: shortener
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
