K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: url-shortener-ingress
  namespace: default

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
  - http:
      paths:

      - path: /shorten
        pathType: Prefix
        backend:
          service:
            name: shortener
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: redirect
            port:
              number: 80
